# pdf-extractext

./: .env  .env.example  .gitignore  Dockerfile  MIT License  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
app/: __init__.py  db.py  main.py  settings.py
app/models/: extractor.py
app/repositories/: __init__.py  document_repository.py
app/services/: checksum_service.py  document_builder.py  pdf_service.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  schemas.py
src/api/routes/: __init__.py  documents.py  health.py
src/application/: __init__.py
src/application/dto/: __init__.py  document_dto.py
src/application/services/: __init__.py  document_service.py  extraction_service.py  summarization_service.py
src/application/use_cases/: __init__.py  extract_text.py  summarize_text.py  upload_document.py
src/config/: __init__.py  constants.py  settings.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  ai_summarizer_adapter.py  mongodb_adapter.py  pdf_extractor_adapter.py
src/infrastructure/database/: __init__.py  connection.py
src/infrastructure/models/: __init__.py  document_model.py  document_repository.py
src/infrastructure/repositories/: __init__.py  base_repository.py  document_repository.py
src/src/: __init__.py
src/src/api/: __init__.py  dependencies.py  schemas.py
src/src/api/routes/: __init__.py
src/src/application/: __init__.py
src/src/application/dto/: __init__.py
src/src/application/services/: __init__.py
src/src/application/use_cases/: __init__.py
src/src/config/: __init__.py
src/src/infrastructure/: __init__.py
src/src/infrastructure/adapters/: __init__.py
src/src/infrastructure/models/: __init__.py
src/src/infrastructure/repositories/: __init__.py
tests/: conftest.py  test_checksum_service.py  test_document_builder.py  test_document_repository.py  test_pdf_service.py  test_settings.py  test_upload.py
tests/integration/: test_api.py
tests/unit/: test_repositories.py  test_services.py
