[project]
name = "pdf-extractext-api"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "python-multipart",
    "pypdf",
    "PyMuPDF",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]